<resources>
    <string name="app_name">ListaGames</string>
    <string name="nome_do_personagem">Nome do personagem</string>
    <string name="data_ano">2018</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_in">LOG IN</string>
    <string name="title_name_game">Nome do game</string>
    <string name="txt_name_game">Nome do game</string>
    <string name="txt_ano_lancamento">Ano</string>
    <string name="txt_description">Descrição</string>
    <string name="description">Description</string>
    <string name="save">SAVE GAME</string>
    <string name="created_at">Created at</string>
    <string name="email">Email</string>
    <string name="senha">Password</string>
    <string name="remember">Remember</string>
    <string name="name">Name</string>
    <string name="repeate_password">Repeate Password</string>
    <string name="ano">2021</string>


</resources>