<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_image"
    tools:context=".login.view.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dim_10_dp"
        android:layout_marginEnd="@dimen/dim_10_dp"
        android:background="@color/colorWhite"
        app:cardCornerRadius="@dimen/dim_10_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="@dimen/dim_41_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:hint="@string/email"
                android:textColorHint="@color/colorGray"
                app:boxBackgroundColor="@color/colorWhite"
                app:boxStrokeColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/dim_18_sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="@dimen/dim_12_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:hint="@string/senha"
                android:textColorHint="@color/colorGray"
                app:boxBackgroundColor="@color/colorWhite"
                app:boxStrokeColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSenhaLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/dim_18_sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_14_dp"
                android:layout_marginTop="@dimen/dim_17_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:text="@string/remember"
                android:textColor="@color/colorNavyBlueStrong"
                android:textSize="@dimen/dim_21_sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="@dimen/dim_52_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:backgroundTint="@color/colorRed"
                android:padding="@dimen/dim_10_dp"
                android:text="@string/log_in"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dim_21_sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="@dimen/dim_10_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:layout_marginBottom="@dimen/dim_15_dp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/colorNavyBlue"
                android:textSize="@dimen/dim_21_sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>