<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".detalhes.view.DetalhesGamesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:elevation="@dimen/dim_2_dp"
        android:background="@color/colorTransparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorTransparente"
            android:elevation="@dimen/dim_4_dp"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imgGameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="60dp"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/mortal_kombat"
        app:layout_collapseMode="parallax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleNameGameDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name_game"
        android:textSize="@dimen/dim_30_sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/imgGameDetail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/dim_16_dp"
        android:layout_marginStart="28dp"/>

    <TextView
        android:id="@+id/txtNameGameDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name_game"
        android:textSize="@dimen/dim_26_sp"
        android:textColor="@color/colorNavyBlue"
        android:layout_marginTop="@dimen/dim_16_dp"
        app:layout_constraintTop_toBottomOf="@+id/imgGameDetail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="28dp"/>

    <TextView
        android:id="@+id/txtAnoLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ano_lancamento"
        android:textSize="@dimen/dim_18_sp"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/dim_4_dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNameGameDetalhes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="28dp"/>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_description"
        android:textSize="@dimen/dim_18_sp"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/dim_20_dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAnoLancamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="28dp"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEditGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_20_dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="383dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>