<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_image"
    android:orientation="vertical"
    tools:context=".savegames.view.SaveGameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bg_circle_red"
        android:elevation="@dimen/dim_4_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/personCreate"
        android:layout_width="@dimen/dim_50_dp"
        android:layout_height="@dimen/dim_50_dp"
        android:elevation="@dimen/dim_8_dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/lnlCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dim_100_dp"
        android:layout_marginStart="@dimen/dim_10_dp"
        android:layout_marginEnd="@dimen/dim_10_dp"
        android:background="@color/colorWhite"
        app:cardCornerRadius="@dimen/dim_10_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:hint="@string/name"
                android:textColorHint="@color/colorGray"
                app:boxBackgroundColor="@color/colorWhite"
                app:boxStrokeColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/dim_18_sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="@dimen/dim_26_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:hint="@string/created_at"
                android:textColorHint="@color/colorGray"
                app:boxBackgroundColor="@color/colorWhite"
                app:boxStrokeColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDataGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/dim_18_sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="@dimen/dim_26_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:hint="@string/description"
                android:textColorHint="@color/colorGray"
                app:boxBackgroundColor="@color/colorWhite"
                app:boxStrokeColor="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescriptionGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/dim_18_sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_19_dp"
                android:layout_marginTop="@dimen/dim_36_dp"
                android:layout_marginEnd="@dimen/dim_19_dp"
                android:layout_marginBottom="@dimen/dim_21_dp"
                android:backgroundTint="@color/colorRed"
                android:lineSpacingMultiplier="0.38"
                android:padding="@dimen/dim_10_dp"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dim_21_sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
